--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^9.1.2",
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
